[gd_scene load_steps=3 format=3 uid="uid://bjeavni3nk783"]

[ext_resource type="Script" path="res://sprite/sprite_animation_load_atlas_texture.gd" id="1_f2wjf"]
[ext_resource type="SpriteFrames" uid="uid://djfre4iy8jd0k" path="res://resources/sprite/actor001/sprite2d_animation_actor001_atlas_texture.tres" id="2_ctpr7"]

[node name="sprite_animation_load_atlas_texture" type="Node2D"]
script = ExtResource("1_f2wjf")

[node name="AnimatedSprite2D_1" type="AnimatedSprite2D" parent="."]
texture_filter = 1
scale = Vector2(3.5, 3.5)
sprite_frames = ExtResource("2_ctpr7")
animation = &"ani_2"
offset = Vector2(0, -22)

[node name="Label" type="Label" parent="AnimatedSprite2D_1"]
offset_left = -37.7143
offset_right = 113.286
offset_bottom = 49.0
scale = Vector2(0.5, 0.5)
theme_override_colors/font_color = Color(0, 1, 0, 1)
text = "load sprite frames
in editor"
horizontal_alignment = 1

[node name="AnimatedSprite2D_2" type="AnimatedSprite2D" parent="."]
texture_filter = 1
scale = Vector2(3.5, 3.5)
offset = Vector2(0, -22)

[node name="Label" type="Label" parent="AnimatedSprite2D_2"]
offset_left = -37.7143
offset_right = 113.286
offset_bottom = 49.0
scale = Vector2(0.5, 0.5)
theme_override_colors/font_color = Color(0, 1, 0, 1)
text = "load sprite frames
in script"
horizontal_alignment = 1

[node name="AnimatedSprite2D_3" type="AnimatedSprite2D" parent="."]
texture_filter = 1
scale = Vector2(3.5, 3.5)
offset = Vector2(0, -22)

[node name="Label" type="Label" parent="AnimatedSprite2D_3"]
offset_left = -37.7143
offset_right = 113.286
offset_bottom = 49.0
scale = Vector2(0.5, 0.5)
theme_override_colors/font_color = Color(0, 1, 0, 1)
text = "build sprite frames
in script"
horizontal_alignment = 1
